Suite Allure Report+Negotiation with DB